--- a/index.html
+++ b/index.html
@@ -17,21 +17,11 @@
             <a class="navbar-brand col-xs-12 col-sm-3" href="javascript:void(0);">
                 <!-- <img src="" alt="Learning Studio"> --> LEARNING STUDIO
             </a>
-            <div class="col-12 col-md-12 col-lg-3 user-details">                                
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img class="mr-3 rounded-circle" src="images/user-images.png" alt="Generic placeholder image" width="30px;">
-                        Admin
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">About</a>
-                    </div>
-                </div>
-            </div>
         </div>
     </nav>
     </header>
     <div class="page-wrapper">
+        <div class="loader"></div>
         <section class="learning-tab">
             <div class="container">
                 <div id="filterContainer">
