added table responsive class

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section class="learning-tab">
             <div class="container">
-                <div >
+                <div class="tabe-responsive">
                     <table class="table table-striped table-dark" id="cricketTeamBoard">
                       <thead>
                         <tr>
