--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <div class="page-wrapper">
         <div class="loader"></div>
-        <section class="learning-tab">
+        <section>
             <div class="container">
                 <div id="filterContainer">
                     <form class="row">
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </section>
-        <section class="learning-tab">
+        <section>
             <div class="container">
                 <div class="table-responsive">
                     <table class="table table-striped table-dark" id="cricketTeamBoard">
@@ -58,6 +58,37 @@
                         </tr>
                       </tbody>
                     </table>
+                </div>
+                <div class="pagination-wrapper">   
+                    <div class="float-left">
+                        <select class="form-control">
+                            <option>10</option>
+                            <option>20</option>
+                            <option>30</option>
+                        </select>
+                    </div>
+                    <nav aria-label="..."  class="float-right">
+                        <span class="jump-to-page float-right">Jump to: <input type="text" name="pagenumber" class="form-control" placeholder="Page No."></span>
+                        <ul class="pagination">
+                            <li class="page-item">
+                                <a class="page-link" href="#">First</a>
+                            </li>
+                            <li class="page-item disabled">
+                                <a class="page-link prev" href="#" tabindex="-1">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>                        
+                            <li class="page-item">
+                                <a class="page-link next" href="#">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">Last</a>
+                            </li>
+                        </ul>
+                        <p class="page-view">Page 1 of 11</p>                                      
+                    </nav>
                 </div>
             </div>
         </section>
