--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                     <table class="table table-striped table-dark" id="cricketTeamBoard">
                       <thead>
                         <tr>
-                          <th scope="col">First Name</th>
-                          <th scope="col">Last Name</th>
-                          <th scope="col">Age</th>
-                          <th scope="col">Gender</th>
+                          <th scope="col" data-column="firstName">First Name <i class="fas fa-sort"></i></th>
+                          <th scope="col" data-column="lastName">Last Name <i class="fas fa-sort"></i></th>
+                          <th scope="col" data-column="age">Age <i class="fas fa-sort"></i></th>
+                          <th scope="col" data-column="gender">Gender <i class="fas fa-sort"></i></th>
                           <th scope="col">Skills</th>
-                          <th scope="col">State</th>
+                          <th scope="col" data-column="state">State <i class="fas fa-sort"></i></th>
                         </tr>
                       </thead>
                       <tbody>
