--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
                     <table class="table table-striped table-dark" id="cricketTeamBoard">
                       <thead>
                         <tr>
-                          <th scope="col" data-column="firstName">First Name <i class="fas fa-sort"></i></th>
-                          <th scope="col" data-column="lastName">Last Name <i class="fas fa-sort"></i></th>
-                          <th scope="col" data-column="age">Age <i class="fas fa-sort"></i></th>
-                          <th scope="col" data-column="gender">Gender <i class="fas fa-sort"></i></th>
-                          <th scope="col">Skills</th>
-                          <th scope="col" data-column="state">State <i class="fas fa-sort"></i></th>
+                            <th scope="col" data-column=""><i class="fas fa-home"></i></th>
+                            <th scope="col" data-column="firstName">First Name <i class="fas fa-sort"></i></th>
+                            <th scope="col" data-column="lastName">Last Name <i class="fas fa-sort"></i></th>
+                            <th scope="col" data-column="age">Age <i class="fas fa-sort"></i></th>
+                            <th scope="col" data-column="gender">Gender <i class="fas fa-sort"></i></th>
+                            <th scope="col">Skills</th>
+                            <th scope="col" data-column="state">State <i class="fas fa-sort"></i></th>
                         </tr>
                       </thead>
                       <tbody>
